--- a/view/form/_photos.html
+++ b/view/form/_photos.html
@@ -5,7 +5,7 @@
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Photo Gallery</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" >Back</span></div>
     </a>
-    <div ng-if="imgURI.length === 1 && !imgURI[0].base64String" style="text-align: center; padding-top:30vw">
+    <div ng-if="imgURI.length === 0  || !imgURI" style="text-align: center; padding-top:30vw">
         <span class="all-ion-text" style="line-height: 15vw;font-size: 15vw; color:#4A6780">No images assigned</span>
     </div>
     <div ng-if="imgURI.length !== 1 || imgURI[0].base64String">
