New design - Update 5

--- a/view/about.html
+++ b/view/about.html
@@ -16,7 +16,7 @@
             <b>Phone:</b><br>
             <a href="tel:+447746134641">+44 77 461 346 41</a><br><br>
             <b>Email:</b><br>
-            <a href="mailto:info@proproject.co.uk">info@proproject.co.uk</a><br><br>
+            <a href="mailto:info@proproject.co.uk">info@proproject.io</a><br><br>
             <b>API Server:</b><br>
             <i>{{server}}</i><br><br>
         </p>
