--- a/view/myaccount.html
+++ b/view/myaccount.html
@@ -3,7 +3,7 @@
         <span class="back-arrow ion-ios-arrow-left"></span>
         <span class="header-prj-text">My account</span>
     </ion-header-bar>
-    <ion-content class=" has-header padding">
+    <ion-content class=" has-header padding" style="padding-bottom: 60px;">
         <ion-item nav-clear menu-close class="dark-bg" style="color:#fff; border: none">
             <div class="user-circle-img" style="width:150px;height:150px">
                 <img src="img/new/user_default.svg" style="width: 100%; margin-left: 0px">
