--- a/view/menu.html
+++ b/view/menu.html
@@ -13,30 +13,19 @@
         <header class="bar bar-header bar-dark">
         </header>
         <ion-content class="has-header dark-bg">
-            <ion-item nav-clear menu-close class="dark-bg dark-border" style="color:#fff">
+            <ion-item nav-clear menu-close class="dark-bg dark-border" style="color:#fff;    padding-bottom: 0px;">
                 <div class="user-circle-img">
                     <img src="img/new/user_default.svg">
                 </div>
                 <div class="menu-name">{{currentUser.role_title}}</div>
                 <div class="menu-email">{{currentUser.username}}</div>
             </ion-item>
-            <ion-item nav-clear menu-close ng-click="logout()" class="dark-bg menu-item p-10-15"
-                      style="color:#fff; border-top: none;">
+            <ion-item nav-clear menu-close ng-click="logout()" class="dark-bg menu-item p-10-15" style="color:#fff; border-top: none; padding: 0px;">
                 <div class="item item-toggle menu-disconnect">
-                    <!--<ion-toggle ng-model="isDisconnect.checked"-->
-                    <!--ng-change="pushIsDisconnectChange()">-->
-                    <!--Disconnect-->
-                    <!--</ion-toggle>-->
                     <button class="button button-block button-calm" >Logout</button>
                 </div>
             </ion-item>
-            <!--<ion-list>-->
-            <!--<ion-item nav-clear menu-close ng-repeat="project in projects"-->
-            <!--class="dark-bg dark-border menu-item" href="#/app/categories/{{project.id}}"-->
-            <!--ng-click="updateTitle(project)">-->
-            <!--{{project.name}}-->
-            <!--</ion-item>-->
-            <!--</ion-list>-->
+
 
             <ion-item nav-clear menu-close ng-click="sync()" class="dark-bg dark-border menu-item p-10-15"
                       style="color:#fff">
@@ -58,7 +47,7 @@
                 <img src="img/new/about.svg">
                 <span>About</span>
             </ion-item>
-            <ion-item nav-clear menu-close href="" onclick="navigator.app.loadUrl('http://app.preprod.proproject.io/', { openExternal:true });"
+            <ion-item nav-clear menu-close href="" onclick="navigator.app.loadUrl('http://app.preprod.proproject.io/', {openExternal: true});"
                       class="dark-bg dark-border menu-item project-web-link">
                 <img src="img/new/onWeb.svg">
                 <span>Project on web</span>
