--- a/view/form/_all.html
+++ b/view/form/_all.html
@@ -152,15 +152,21 @@
 <!--date-->
 <div for="{{hash}}" class="item item-input item-stacked-label calm-border"
      ng-class="{required: data.required, 'has-error': data.errors.length}"
-     ng-if="data.type == 'date'">
+     ng-if="data.type == 'date'" >
 
     <div class="inputLabel">
         <span class="all-name" ng-class="{'all-req' : data.required }">{{data.name}}</span>
         <span class="all-description">{{data.guidance}}</span>
     </div>
-    <input input id="{{hash}}" type="date" name="{{data.name}}"
-           ng-model="data.value" value="{{data.default_value}}" placeholder="{{data.placeholder}}"
-           ng-required="data.required">
+    <!--    <input input id="{{hash}}" type="date" name="{{data.name}}"
+               ng-model="data.value" value="{{data.default_value}}" placeholder="{{data.placeholder}}"
+               ng-required="data.required">-->
+
+    <div ng-required="data.required" ion-datetime-picker date ng-model="data.value" style="padding-left: 15px;padding-right: 15px;border-top-left-radius: 0px;border-top-right-radius: 0px;overflow: hidden;height: 46px;padding-top: 12px;font-size: 14px;color: #000;background-color: #fff;">
+        {{data.value| date: "dd-MM-yyyy"}}
+    </div>
+
+
 </div>
 
 <!--time-->
@@ -172,9 +178,14 @@
         <span class="all-name" ng-class="{'all-req' : data.required }">{{data.name}}</span>
         <span class="all-description">{{data.guidance}}</span>
     </div>
-    <input input id="{{hash}}" type="time" name="{{data.name}}"
-           ng-model="data.value" value="{{data.default_value}}" placeholder="{{data.placeholder}}"
-           ng-required="data.required">
+    <!--    <input input id="{{hash}}" type="time" name="{{data.name}}"
+               ng-model="data.value" value="{{data.default_value}}" placeholder="{{data.placeholder}}"
+               ng-required="data.required">-->
+
+    <div ng-required="data.required" ion-datetime-picker time ng-model="data.value" style="padding-left: 15px;padding-right: 15px;border-top-left-radius: 0px;border-top-right-radius: 0px;overflow: hidden;height: 46px;padding-top: 12px;font-size: 14px;color: #000;background-color: #fff;">
+        {{data.value| date: "H:mm"}}
+    </div>
+
 </div>
 
 <!--test
