--- a/view/menu.html
+++ b/view/menu.html
@@ -22,7 +22,7 @@
             </ion-item>
             <ion-item nav-clear menu-close ng-click="logout()" class="dark-bg menu-item p-10-15" style="color:#fff; border-top: none; padding: 0px;">
                 <div class="item item-toggle menu-disconnect">
-                    <button class="button button-block button-calm" >Logout</button>
+                    <button class="button button-block button-calm" style="margin-top:5px;height: 30px;min-height: 30px;line-height: 20px;">Logout</button>
                 </div>
             </ion-item>
 
