--- a/view/edit.html
+++ b/view/edit.html
@@ -1,5 +1,5 @@
 <ion-view title="Form" id="form" cache-view="false">
-    <ion-content class="blue-bgd">
+    <ion-content class="blue-bgd"  delegate-handle="mainScroll">
         <div class="content">
             <div class="list"  ng-if="filter.state === 'form'">
                 <a class="item item-button-left subHeader-form-bar" ng-click="back()"
