--- a/view/form-instance.html
+++ b/view/form-instance.html
@@ -7,7 +7,7 @@
         </ion-header-bar>-->
 
 
-    <ion-content scroll-watch class="blue-bgd">
+    <ion-content scroll-watch class="blue-bgd"  delegate-handle="mainScroll">
         <div class="content">
 
             <div class="list" ng-if="filter.state === 'form'">
