--- a/view/form/_resource.html
+++ b/view/form/_resource.html
@@ -1,6 +1,6 @@
 <div class="list" ng-if="!filter.substate">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.state = 'form';
-        filter.actionBtnShow = false">
+        filter.actionBtnShow = false;goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle">Done</span></div>
@@ -8,7 +8,7 @@
     <form class="form-new-fields">
 
         <ion-list show-delete="data.showDelete">
-            <ion-item ng-repeat="resource in resourceField.resources" item="resource" class="item-remove-animate" ng-click="filter.substate = resource">
+            <ion-item ng-repeat="resource in resourceField.resources" item="resource" class="item-remove-animate" ng-click="filter.substate = resource;goToTop()">
                 <span ng-if="!resource.name">Resource {{$index + 1}}</span>
                 <span ng-if="resource.name">{{resource.name}}</span>
                 <ion-option-button class="button-assertive" ng-click="deleteElement(resourceField.resources, resource)" ng-if="filter.edit">
@@ -28,7 +28,7 @@
 </div>
 <div class="list" ng-if="filter.substate">
     <a class="item item-button-left subHeader-form-bar" ng-click="filter.substate = null;
-        filter.actionBtnShow = true">
+        filter.actionBtnShow = true;goToTop()">
         <div class="back-arrow ion-ios-arrow-left"></div>
         <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
             <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="filter.edit">Save</span><span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle" ng-if="!filter.edit">Back</span></div>
