--- a/view/form/_payitem.html
+++ b/view/form/_payitem.html
@@ -271,7 +271,7 @@
                             <div class="inputLabel" style="padding-top: 10px;">
                                 <span class="all-name">Wastage</span>
                             </div>
-                            <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateStkRes.wastage"type="number" >
+                            <input percentage-field style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateStkRes.wastage"type="text" >
                         </label>
 
                         <label class="item item-input item-stacked-label calm-border">
@@ -381,7 +381,7 @@
                         <div class="inputLabel" style="padding-top: 10px;">
                             <span class="all-name">Wastage</span>
                         </div>
-                        <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateRes.wastage"type="number" >
+                        <input percentage-field style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substateRes.wastage"type="text" >
                     </label>
 
                     <label class="item item-input item-stacked-label calm-border">
