--- a/view/menu.html
+++ b/view/menu.html
@@ -50,7 +50,7 @@
             <ion-item nav-clear menu-close href="" onclick="navigator.app.loadUrl('http://app.preprod.proproject.io/', {openExternal: true});"
                       class="dark-bg dark-border menu-item project-web-link">
                 <img src="img/new/onWeb.svg">
-                <span>Project on web</span>
+                <span>ProProject on web</span>
             </ion-item>
         </ion-content>
     </ion-side-menu>
